--- a/style.css
+++ b/style.css
@@ -400,7 +400,7 @@ header {
 
 .project-content {
     padding: 60px;
-    color: white;
+    color: rgb(92, 110, 110);
     padding: 5px 15px;
     border-radius: 20px;
     font-size: 0.8rem;
